--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,6 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -33,7 +32,6 @@
         <h1 class="fw-bolder">Welcome to simple quiz app</h1>
         <p class="lead">A functional Bootstrap 5 boilerplate for one page scrolling websites</p>
         <a class="btn btn-lg btn-dark" href="select">Play now!</a>
-        <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a>
     </div>
 </header>
 <!-- About section-->
@@ -57,35 +55,23 @@
         </div>
     </div>
 </section>
-<!-- Services section-->
-<section class="bg-light" id="services">
-    <div class="container px-4">
-        <div class="row gx-4 justify-content-center">
-            <div class="col-lg-8">
-                <h2>Services we offer</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore,
-                    expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda
-                    laborum vel, labore ut velit dignissimos.</p>
-            </div>
-        </div>
-    </div>
-</section>
 <!-- Contact section-->
-<section id="contact">
+<section class="bg-light" id="contact">
     <div class="container px-4">
         <div class="row gx-4 justify-content-center">
             <div class="col-lg-8">
                 <h2>Contact us</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem
-                    dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa
-                    exercitationem, in, quo totam.</p>
+                <p class="lead">For more information please contact us at: </br>
+                    k.siezieniewski@gmail.com
+                </p>
             </div>
         </div>
     </div>
 </section>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
-    <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+    <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Karol Siezieniewski <span th:text="${#dates.year(#dates.createNow())}"></span> </br>
+        Template by <a href="https://startbootstrap.com/templates/scrolling-nav/">Start Bootstrap</a></p></p></div>
 </footer>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
