--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -41,6 +41,42 @@
                 <input name="numberOfQuestionsInput" id="numberOfQuestionsInput" th:field="*{numberOfQuestions}"
                        type="number" min="1" max="20" step="1"/>
             </div>
+            <div class="form-group">
+                <h4>Difficulty:</h4>
+
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="difficulty"
+                           id="difficulty_EASY" value="EASY">
+                    <label class="form-check-label" for="difficulty_EASY">EASY</label>
+                </div>
+
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="difficulty"
+                           id="difficulty_MEDIUM" value="MEDIUM">
+                    <label class="form-check-label" for="difficulty_MEDIUM">MEDIUM</label>
+                </div>
+
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="difficulty"
+                           id="difficulty_HARD" value="HARD">
+                    <label class="form-check-label" for="difficulty_HARD">HARD</label>
+                </div>
+
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group">
+                <h4>Category:</h4>
+                <th:block th:each="category : ${categories}">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="categoryRadioOptions"
+                               th:id="'category_' + ${category.getId()}" th:value="${category.getId()}" th:field="*{categoryId}">
+                        <label class="form-check-label" th:for="'difficulty_' + ${category.getId()}"
+                               th:text="${category.getName()}">
+                        </label>
+                    </div>
+                </th:block>
+            </div>
         </div>
         <div class="form-row">
             <div class="form-group">
@@ -51,7 +87,8 @@
 </section>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
-    <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+    <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Karol Siezieniewski <span th:text="${#dates.year(#dates.createNow())}"></span> </br>
+        Template by <a href="https://startbootstrap.com/templates/scrolling-nav/">Start Bootstrap</a></p></p></div>
 </footer>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
