Adding more stuff to implement ongoing game

--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -32,7 +32,7 @@
     </div>
 </header>
 <!-- Options section-->
-<section id="options">
+<section id="options" class="container px-4">
     <form action="#" th:action="@{/select}" th:object="${gameOptions}" method="post">
         <div class="form-row">
             <div class="form-group">
