Fixing bug in FrontEndController and introducing some code formatting

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -59,7 +59,8 @@
 </form>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
-    <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Karol Siezieniewski <span th:text="${#dates.year(#dates.createNow())}"></span> </br>
+    <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Karol Siezieniewski <span
+            th:text="${#dates.year(#dates.createNow())}"></span> </br>
         Template by <a href="https://startbootstrap.com/templates/scrolling-nav/">Start Bootstrap</a></p></p></div>
 </footer>
 <!-- Bootstrap core JS-->
