--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -70,7 +70,8 @@
                 <th:block th:each="category : ${categories}">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="categoryRadioOptions"
-                               th:id="'category_' + ${category.getId()}" th:value="${category.getId()}" th:field="*{categoryId}">
+                               th:id="'category_' + ${category.getId()}" th:value="${category.getId()}"
+                               th:field="*{categoryId}">
                         <label class="form-check-label" th:for="'difficulty_' + ${category.getId()}"
                                th:text="${category.getName()}">
                         </label>
@@ -87,7 +88,8 @@
 </section>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
-    <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Karol Siezieniewski <span th:text="${#dates.year(#dates.createNow())}"></span> </br>
+    <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Karol Siezieniewski <span
+            th:text="${#dates.year(#dates.createNow())}"></span> </br>
         Template by <a href="https://startbootstrap.com/templates/scrolling-nav/">Start Bootstrap</a></p></p></div>
 </footer>
 <!-- Bootstrap core JS-->
