--- a/src/main/resources/templates/summary.html
+++ b/src/main/resources/templates/summary.html
@@ -35,13 +35,15 @@
 <header class="bg-success text-white">
     <div class="container text-center">
         <h1>Congratulations!</h1>
-        <p class="lead" th:text="'You finished ' + ${difficulty} + ' quiz about ' + ${categoryName} + ' with score ' + ${points} + '/' + ${maxPoints} + '.'"></p>
+        <p class="lead"
+           th:text="'You finished ' + ${difficulty} + ' quiz about ' + ${categoryName} + ' with score ' + ${points} + '/' + ${maxPoints} + '.'"></p>
         <a class="btn btn-primary" href="select">Play again!</a>
     </div>
 </header>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
-    <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Karol Siezieniewski <span th:text="${#dates.year(#dates.createNow())}"></span> </br>
+    <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Karol Siezieniewski <span
+            th:text="${#dates.year(#dates.createNow())}"></span> </br>
         Template by <a href="https://startbootstrap.com/templates/scrolling-nav/">Start Bootstrap</a></p></p></div>
 </footer>
 <!-- Bootstrap core JS-->
