--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -6,7 +6,7 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Simple quiz app</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="assets/testicon.ico"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet"/>
 </head>
@@ -18,11 +18,6 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#options">Options</a></li>
-            </ul>
-        </div>
     </div>
 </nav>
 <!-- Header-->
@@ -31,7 +26,7 @@
         <h1 class="fw-bolder">Simple quiz app - game</h1>
     </div>
 </header>
-<!-- Options section-->
+<!-- Game section-->
 <form action="#" th:action="@{/game}" th:object="${userAnswer}" method="post">
     <div class="form-row">
         <h3 th:text="'Question ' + ${currentQuestionNumber} + '/' + ${totalQuestionNumber} + ':'"></h3>
