--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Simple quiz app</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="assets/testicon.ico"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet"/>
 </head>
@@ -30,7 +30,7 @@
 <header class="bg-danger bg-gradient text-white">
     <div class="container px-4 text-center">
         <h1 class="fw-bolder">Welcome to simple quiz app</h1>
-        <p class="lead">A functional Bootstrap 5 boilerplate for one page scrolling websites</p>
+        <p class="lead">A small spring based web game</p>
         <a class="btn btn-lg btn-dark" href="select">Play now!</a>
     </div>
 </header>
@@ -40,16 +40,11 @@
         <div class="row gx-4 justify-content-center">
             <div class="col-lg-8">
                 <h2>About this page</h2>
-                <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled
-                    so you can use it as a boilerplate or starting point for you own landing page designs! This template
-                    features:</p>
+                <p class="lead">This is a demo project for simple quiz app. Following page contains:</p>
                 <ul>
-                    <li>Clickable nav links that smooth scroll to page sections</li>
-                    <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-                    <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the
-                        navbar
-                    </li>
-                    <li>Minimal custom CSS so you are free to explore your own unique design options</li>
+                    <li>Simple quiz game with various questions provided by Open Trivia DB</li>
+                    <li>Ability to change game settings(number of questions, difficulty, question's category)</li>
+                    <li>Page containing your score after finishing the game</li>
                 </ul>
             </div>
         </div>
